# DriveBot

./: .gitignore  Dockerfile
ws/install/: local_setup.sh  setup.sh
ws/install/four_wheel_bot_description/share/four_wheel_bot_description/: package.dsv  package.ps1  package.sh
ws/install/four_wheel_bot_description/share/four_wheel_bot_description/config/: my_configs.yaml
ws/install/four_wheel_bot_description/share/four_wheel_bot_description/launch/: display.launch.py
ws/install/four_wheel_bot_description/share/four_wheel_bot_description/urdf/: four_wheel_bot.xacro  ros2_control.xacro
ws/log/: latest_build
ws/src/four_wheel_arduino_code/test/test_connection/: test_connection.ino
ws/src/four_wheel_bot_description/launch/: display.launch.py
ws/src/four_wheel_bot_description/urdf/: four_wheel_bot.xacro  ros2_control.xacro
ws/src/four_wheel_hardware/: CMakeLists.txt  package.xml  plugin.xml
ws/src/four_wheel_hardware/include/four_wheel_hardware/: actual_hardware_interface.hpp  diffbot_hardware.hpp
ws/src/four_wheel_hardware/src/: actual_hardware_interface.cpp  diffbot_hardware.cpp
ws/src/four_wheel_pybullet_sim/: main.py
